    Terminus font (4.32).
  * Lets try to remove some unnecessary and potentialy harmful on
    non-standard layouts mappings for Linux (Ctrl+'=^G, Ctrl+3=^[,
    Ctrl+4=^\, Ctrl+5=^], Ctrl+7=^_, Ctrl+8=^?).
  * ckbcomp: New option -backspace del|bs to determine the behaviour of
    BackSpace and Delete keys.  A corresponding variable BACKSPACE in
    /etc/default/keyboard.

  [ Samuel Thibault ]
  * Fonts/bdf2psf: Fix typo.

 -- Anton Zinoviev <zinoviev@debian.org>  Tue, 01 Mar 2011 13:46:02 +0200

console-setup (1.70) unstable; urgency=low

  * ckbcomp: permit '_' in all identifiers.  Thanks to Jonny, Javier
    Vasquez and Eric Valette.

 -- Anton Zinoviev <zinoviev@debian.org>  Thu, 24 Feb 2011 18:31:21 +0200

console-setup (1.69) unstable; urgency=low

  [ Joey Hess ]
  * rules: Remove obsolete commands to clean up when building from cvs, and
    svn. (Now in git; pollution of subdirs should no longer be an issue.)

  [ Samuel Thibault ]
  * Use bg, ch, se instead of bg(bds), ch(de), se(basic), as those are not in
    xorg.xml any more (closes: #610843).
  * config: Use the braille font name from the console-braille package.

 -- Julien Cristau <jcristau@debian.org>  Thu, 17 Feb 2011 22:54:58 +0100

console-setup (1.68) unstable; urgency=high

  * Fix el.po, it had question marks instead of non-ascii characters
    (closes: #609624)
  * Restore fa.po, he.po, zh_TW.po, same issue.
  * Revert latest update to pa.po, same issue.
  * Revert most of the last update to is.po, same issue.

 -- Julien Cristau <jcristau@debian.org>  Tue, 11 Jan 2011 13:10:38 +0100

console-setup (1.67) unstable; urgency=low

  [ Anton Zinoviev ]
  * ckbcomp: process properly %(v) and %_v.  Interpret Henkan, Hiragana,
    Hiragana_Katakana, Muhenkan and some XF86... symbols as VoidSymbol.
    Thanks to Sebastian Reichel, closes: #608227.

  [ Christian Perrier ]
  * Remove debconf-2.0 alternative from Pre-Depends.
    Really Closes: #604153
